FIX - Did not need to change the style of .centeralign

--- a/css/plugins/wrap.less
+++ b/css/plugins/wrap.less
@@ -1,7 +1,7 @@
 /* =Wrap Plugin
 ----------------------------------------------- */
 
-.wrap_button a, .centeralign a {
+.wrap_button a {
 	-webkit-text-size-adjust: 100%;
 	word-wrap: break-word;
 	font-family: Montserrat,sans-serif;
